# munchkin-lvl

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
munchkin/game/: consumers.py  forms.py  models.py  routing.py  urls.py  views.py
munchkin/game/migrations/: 0001_initial.py  0002_player_creation_time.py  0003_player_player_is_male.py  0004_remove_player_player_is_male.py  0005_player_player_gender.py  0006_player_update_time_alter_player_creation_time.py  0007_game_creation_time_game_update_time.py  0008_alter_game_update_time.py  0009_alter_player_update_time.py
munchkin/munchkin/: asgi.py  settings.py  urls.py  wsgi.py
munchkin/static/: main.css
munchkin/staticfiles/: main.css
munchkin/templates/: base.html  confirm_removing.html  game.html  index.html  player_card.html  players_table.html
munchkin/templates/static/: main.css
nginx/: nginx.conf
