[project]
name = "munchkin"
version = "0.1.0"
description = ""
authors = [
    {name = "zothbwf",email = "ikpliskin007@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "psycopg2 (>=2.9.10,<3.0.0)",
    "django (>=5.2.4,<6.0.0)",
    "channels (>=4.2.2,<5.0.0)",
    "daphne (>=4.2.1,<5.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
